<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="122dp"
        android:layout_height="106dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/sOwnerReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchReader"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sOwnerWrite"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:text="@string/switchWrite"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sOwnerExcute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchExcute"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="121dp"
        android:layout_height="106dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Switch
            android:id="@+id/sGroupReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchReader"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sGroupWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchWrite"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sGroupExcute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchExcute"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="121dp"
        android:layout_height="106dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="216dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/sPublicReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchReader"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sPublicWrite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchWrite"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sPublicExcute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchExcute"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="390dp"
        android:layout_height="42dp"
        android:layout_marginTop="156dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtOwner" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtGroup" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtPublic" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="seleccionar"
        android:text="@string/buton"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout22"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout22"
        app:layout_constraintStart_toStartOf="@+id/linearLayout22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="390dp"
        android:layout_height="37dp"
        android:layout_marginTop="436dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtAbsolute" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtSymbolic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="192dp"
        android:layout_height="109dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22">

        <TextView
            android:id="@+id/txtOwnerOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtGroupOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtPublicOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="194dp"
        android:layout_height="109dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22"
        app:layout_constraintVertical_bias="0.47">

        <TextView
            android:id="@+id/txtSOwnerReader"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txxtSOwnerWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSOwnerExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSGroupReader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSGroupWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSGroupExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSPublicReader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSPublicWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSPublicExecute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>